<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="5dp"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:paddingEnd="5dp"
    android:paddingRight="5dp"
    android:paddingBottom="5dp">

    <ImageView
        android:id="@+id/adItemIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/text_default"
        android:src="@drawable/loading_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/adItemIcon"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/adItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/main_font"
            android:text="@string/text_default"
            android:textColor="#FFFFFF"
            android:textSize="21sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/adRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/text_content_desc"
                android:fontFamily="@font/main_font"
                android:text="@string/text_default_rating"
                android:textColor="#F8D700"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/adStarsImage"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/text_content_desc" />

            <TextView
                android:id="@+id/adDownloads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/text_content_desc"
                android:fontFamily="@font/main_font"
                android:text="@string/text_default_downloads"
                android:textColor="#BDBDBD"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>