<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/adDetailsBackColor"
    tools:context=".ui.AdDetailsFragment">

    <LinearLayout
        android:id="@+id/adDetailsHeadGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/adDetailsToolbarBackColor"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnBackToList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@color/adDetailsToolbarBackColor"
            android:drawableStart="@drawable/arrow_left"
            android:text="@string/button_back_to_ad_list_text" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtAdDetailsHeader"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fontFamily="@font/main_font"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/text_ad_details_header"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="21sp"
        android:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toBottomOf="@+id/adDetailsHeadGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/adIcon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/text_content_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adDetailsHeadGroup"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/adName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:contentDescription="@string/text_content_desc"
        android:fontFamily="@font/main_font"
        android:gravity="center_horizontal"
        android:text="@string/text_default"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adIcon" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adName">

        <TextView
            android:id="@+id/adRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_content_desc"
            android:fontFamily="@font/main_font"
            android:text="@string/text_default_rating"
            android:textColor="#F8D700"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/adStarsImage"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/text_content_desc" />

        <TextView
            android:id="@+id/adDownloads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/text_content_desc"
            android:fontFamily="@font/main_font"
            android:text="@string/text_default_downloads"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/adNameVerticalGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/adNameSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_content_desc"
            android:fontFamily="@font/main_font"
            android:gravity="center_horizontal"
            android:text="@string/text_default"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/adDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/text_content_desc"
            android:fontFamily="@font/main_font"
            android:gravity="center_horizontal"
            android:text="@string/text_default"
            android:textColor="#000000"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/adDetailsFooterGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/adDetailsToolbarBackColor"
        android:gravity="right"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnInstall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@color/adDetailsToolbarBackColor"
            android:text="@string/button_back_to_ad_list_text" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>